[package]
name = "async-transmit"
version = "0.3.1-alpha.0"
authors = ["Alisue <lambdalisue@hashnote.net>"]
edition = "2018"

description = "Trait for transmitting data to peers asynchronously."
repository = "https://github.com/lambdalisue/rs-async-transmit"
license = "MIT"
readme = "README.md"
keywords = ["async", "trait", "sender", "sink"]

[package.metadata.docs.rs]
all-features = true

[features]
with-tokio = [
    "tokio/sync"
]
with-async-channel = [
    "async-channel"
]
with-sink = [
    "futures-sink",
    "futures-util/sink",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.48"
futures-core = "0.3.13"
async-channel = { version = "1.6.1", optional = true }
futures-sink = { version = "0.3.13", optional = true }
futures-util = { version = "0.3.13", optional = true }
tokio = { version = "1.3.0", optional = true }

[dev-dependencies]
anyhow = "1.0.38"
futures-await-test = "0.3.0"
futures = "0.3.13"
