[package]
name = "async-transmit"
version = "0.3.3"
authors = ["Alisue <lambdalisue@hashnote.net>"]
edition = "2018"

description = "Trait for transmitting data to peers asynchronously."
repository = "https://github.com/lambdalisue/rs-async-transmit"
license = "MIT"
readme = "README.md"
keywords = ["async", "trait", "sender", "sink"]

[package.metadata.docs.rs]
all-features = true

[features]
with-tokio = [
    "tokio/sync"
]
with-async-channel = [
    "async-channel"
]
with-sink = [
    "futures-sink",
    "futures-util/sink",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
futures-core = "0.3.17"
async-channel = { version = "2.1.0", optional = true }
futures-sink = { version = "0.3.17", optional = true }
futures-util = { version = "0.3.17", optional = true }
tokio = { version = "1.11.0", optional = true }

[dev-dependencies]
anyhow = "1.0.44"
futures-await-test = "0.3.0"
futures = "0.3.17"
